--- a/calculadora/css/home.css
+++ b/calculadora/css/home.css
@@ -169,16 +169,16 @@ header {
 
 .container-produtos {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Cada coluna terá no mínimo 300px e se ajustará automaticamente */
     gap: 10px;
+    padding: 20px; /* Adiciona preenchimento ao redor dos elementos */
 }
 
 .grid-produtos {
     background: white;
     border-radius: 10px;
     padding: 20px;
-    margin: 20px auto;
-
+    /* margin: 20px auto; */ /* Remove a margem aqui */
 }
 
 .section-title-produtos {
@@ -282,7 +282,7 @@ header {
 }
 
 table {
-    border-spacing: 1;
+    border-spacing: 0;
     border-collapse: collapse;
     background: transparent;
     border-radius: 10px;
@@ -298,7 +298,8 @@ table * {
 
 table td,
 table th {
-    padding-left: 8px
+    border: 1px solid #eaeaea;
+    padding-left: 8px ;  
 }
 
 table thead tr {
@@ -342,11 +343,14 @@ tbody tr:nth-child(even) {
 
 tbody tr {
     font-family: OpenSans-Regular;
-    font-size: 12px;
+    font-size: 15px;
     color: rgb(8, 8, 8);
     line-height: 1.2;
     font-weight: unset
 }
+.indice-tabela {
+    width: 150px;
+  }
 
 .container-lucro {
     display: flex;
