--- a/calculadora/css/home.css
+++ b/calculadora/css/home.css
@@ -14,7 +14,8 @@ header {
     background-color: #eb8cc5;
     padding: 8px 2%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between;    
+    align-items: center;
 }
 
 .info-header {
@@ -72,7 +73,81 @@ header {
     height: 100%;
 }
 
-.sidebar {
+header nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+header nav ul li a:hover{
+    opacity: 0.7;
+}
+
+header nav {
+    display: flex;
+    align-items: center;
+}
+
+.nav-list {
+    list-style: none;
+    display: flex;
+}
+
+.nav-list li {
+    margin-left: 15px;
+}
+
+.mobile-menu {
+    display: none;
+    cursor: pointer;
+}
+.mobile-menu div {
+    width: 20px;
+    height: 2px;
+    background: #fff;
+    margin: 4px;
+}
+
+@media (max-width: 650px) {
+    body {
+        overflow: hidden;
+    }
+    .nav-list {
+        position: absolute;
+        top: 8vh;
+        right: 0;
+        width: 35vw;
+        height: 100%;
+        background: #eb8cc5;
+        flex-direction: column;
+        align-items: center;
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in;
+    }
+    .nav-list li {
+        margin-left: 0;
+        opacity: 0;
+        margin-bottom: 15px;
+    }
+    .mobile-menu {
+        display: block;
+    }
+}
+.nav-list.active {
+    transform:translateX(0)
+}
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+/* .sidebar {
     width: 15%;
     background-color: rgb(255, 206, 244);
     height: 100%;
@@ -111,10 +186,10 @@ header {
 
 .sidebar a>svg {
     color: #444;
-}
+} */
 
 .content {
-    width: 85%;
+    width: 100%;
     background-color: rgb(245, 245, 245);
     padding: 20px;
 }
@@ -123,6 +198,8 @@ header {
     border-radius: 10px;
     background-color: white;
     padding: 10px;
+    width: 97%;
+    margin: 0 auto;
 }
 
 .titulo-secao h2 {
@@ -178,7 +255,6 @@ header {
     background: white;
     border-radius: 10px;
     padding: 20px;
-    /* margin: 20px auto; */ /* Remove a margem aqui */
 }
 
 .section-title-produtos {
@@ -246,7 +322,7 @@ header {
 }
 .btn-calcular-produtos2 {
     display: block;
-    width: 100%;
+    width: 25%;
     background: #0056b3;
     color: white;
     padding: 10px 0;
